# stars

./: .clang-format  .gitignore  CMakeLists.txt  stm32_gcc.cmake
Core/Inc/: led_buffer.h  motion_sensor.h  status_led.h  stm32f4xx_it.h
Core/Src/: gpio.c  led_buffer.cc  main.c  main.cc  motion_sensor.cc  spi.c  status_led.cc  stm32f4xx_it.c
